--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "name": "f1-angular",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "description": "A starter project for F1 AngularJS",
   "repository": "https://github.com/bennycwong/f1-angular",
   "license": "MIT",
   "devDependencies": {
+    "karma": "~0.10",
+    "protractor": "~0.17.0",
+    "http-server": "^0.6.1",
+    "bower": "^1.3.1",
+    "shelljs": "^0.2.6"
+  },
+  "dependencies": {
     "karma": "~0.10",
     "protractor": "~0.17.0",
     "http-server": "^0.6.1",
