--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "f1-angular",
-  "private": false,
+  "private": true,
   "version": "0.0.0",
   "description": "A starter project for F1 AngularJS",
   "repository": "https://github.com/bennycwong/f1-angular",
