--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "shelljs": "^0.2.6"
   },
   "dependencies": {
-    
+    "karma": "~0.10",
     "protractor": "~0.17.0",
     "http-server": "^0.6.1",
     "bower": "^1.3.1",
-    "shelljs": "^0.2.6"
+    "shelljs": "^0.2.6",
+    "phantomjs": "~1.9.7"
   },
   "scripts": {
     "postinstall": "bower install",
